# usb_security

./: .gitignore  USBEncryptAgent-3.1.spec  doc.json  main.py  pyproject.toml
Apps/: USBDecryptAgent-3.0.spec  USBEncryptAgent-3.0.spec  USBEncryptAgent-3.1.spec
Client/: client_sync.py  offline_manager.py  offline_usb_data.db  usb_auto_encrypt_agent.py  usb_decrypt_virtual_agent.py  usb_gui_froce_dycrypt.py
Server/: admin.py  app.py  bulk_test.py  config.py  db_utils.py  nginx.conf  run_admin.bat  setup_offline.py  tests.py
Server/templates/: admin.html  adminold1.html  index.html  login.html  loginold.html  mfa_qr.html  offline_admin.html  update_decryption_form.html
Server/templates/cdn.oaistatic.com/assets/: .headers
