[project]
name = "usb-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=4.0.0",
    "flask-talisman>=1.1.0",
    "flask-wtf>=1.2.2",
    "pyinstaller>=6.16.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "pyotp>=2.9.0",
    "python-dotenv>=1.1.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
    # Windows-only deps
    "pywin32==311; sys_platform == 'win32'",
    "wmi>=1.5.1; sys_platform == 'win32'",
]
